tdf#165181 Don't overwrite guessed media MIME type with default on load

MIME types for media can be the default one,
'application/vnd.sun.star.media'.
In ODFs coming from old versions, for media unsupported
at the time, this default MIME type was used, and is read
when opening them in new versions.

MIME type is also guessed more accurately from the URI
(file name and extension), but was overwritten by the saved
MIME type. When using the UI, it is again overwritten by
the guessed MIME type, but not when using '--convert-to'.

This can cause a problem when saving ODPs to PPTX, PP will
consider these files corrupted.

Started happening after bc72514f90d90e1ab3fed8167663e835edf03508.

Change-Id: Icd95b06d54154f3b533840f8a5f381400f2e6108
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181399
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit cde91f936d8b569278f63205e942ea3ded5907b3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181478
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>